[package]
edition = "2021"
name = "rust-nodejs-addon-min"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.14" }
napi-derive = "2.10.1"

[profile.release]
lto = true
